Add setting to use VS Code integrated browser

--- a/package.json
+++ b/package.json
@@ -276,6 +276,14 @@
             "Accept-Ranges": "bytes"
           },
           "description": "%settings.httpHeaders%"
+        },
+        "livePreview.useIntegratedBrowser": {
+          "type": "boolean",
+          "default": false,
+          "description": "%settings.useIntegratedBrowser%",
+          "tags": [
+            "onExp"
+          ]
         }
       }
     },
